syntax = "proto3";

package atomix.partition;

import "google/protobuf/any.proto";

option java_package = "io.atomix.api.partition";
option java_multiple_files = true;

// Partition identifier
message PartitionId {
    int32 partition = 1;
    string group = 2;
}

// Partition group info
message PartitionGroup {
    string name = 1;
    PartitionGroupSpec spec = 2;
    repeated Partition partitions = 3;
}

// Partition info
message Partition {
    int32 partition_id = 1;
    repeated PartitionEndpoint endpoints = 2;
}

// Partition endpoint
message PartitionEndpoint {
    string host = 2;
    int32 port = 3;
}

// Partition group specification
message PartitionGroupSpec {
    string name = 1;
    google.protobuf.Any group = 2;
}
