syntax = "proto3";

package atomix.collection;

option java_package = "io.atomix.grpc.collection";
option java_multiple_files = true;

// Collection size
message Size {
    uint32 size = 1;
}

// Is empty response
message IsEmpty {
    bool isEmpty = 1;
}

// Contains response
message Contains {
    bool contains = 1;
}

// Add response
message Added {
    bool added = 1;
}

// Remove response
message Removed {
    bool removed = 1;
}
